--- a/Top10/index.html
+++ b/Top10/index.html
@@ -43,7 +43,7 @@
       <td>
         <!-- D is for Dogs -->
         <a href="https://www.instagram.com/lucytheterrier/?hl=en" target="_blank">D is for Dogs<br>
-        <img src="assets/dog.jpg" alt="My dog Lucy" width="300">
+        <img src="assets/dog.JPG" alt="My dog Lucy" width="300">
         </a>
         <br>
         <br>
