--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h2>Exercises</h2>
   <ul>
     <li><a href="https://ashleyezhang.github.io/interaction/Top10/" target="blank">Top 10</a></li>
-    <li><a href="LINK GOES HERE" target="blank">Exercise name</a></li>
+    <li><a href="https://ashleyezhang.github.io/interaction/ShapeComposition/" target="blank">ShapeComposition</a></li>
     <li><a href="LINK GOES HERE" target="blank">Exercise name</a></li>
   </ul>
 
