--- a/PathProject/begin.html
+++ b/PathProject/begin.html
@@ -8,9 +8,9 @@
   </head>
 
   <body class="day_bg">
-    <h1> Ashley's Path Project </h1>
-    <p id=start> Ready for your adventure? Start by</p>
-    <a href="https://open.spotify.com/playlist/2FVMaxVafWmF2kZSMtRXXP?si=f5a7de5651974d80">putting in your headphones</a>
+    <h1> I love New York because I feel like I can go anywhere, at any time. <br> <br> But first, I have to get to the L train. </h1>
+    <p id=start> Ready to come on an adventure with me? Start by</p>
+    <a href="https://open.spotify.com/playlist/2FVMaxVafWmF2kZSMtRXXP?si=f5a7de5651974d80"> 🎧 putting in your headphones 🎧</a>
 
   </body>
 </html>
