--- a/PathProject/birthday.html
+++ b/PathProject/birthday.html
@@ -8,9 +8,9 @@
   </head>
 
   <body class="day_bg">
-    <p id=start> Passing a bakery reminds you that you need to pick up a cake for your friend's birthday.</p>
+    <p> Passing a bakery reminds you that you need to pick up a cake for your friend's birthday.</p>
     <a href="http://evite.me/vqXywVM8UK"
-    >Check the invitation to see when the party is.</a>
+    >💌 Check the invitation to see when the party is. 💌</a>
 
   </body>
 </html>
