--- a/PathProject/grocery_list.html
+++ b/PathProject/grocery_list.html
@@ -8,9 +8,9 @@
   </head>
 
   <body class="day_bg">
-    <p id=start> Passing by all this food is making you hungry.</p>
+    <p> Passing by all this food is making you hungry.</p>
     <a href="https://docs.google.com/document/d/1wl63PQF0XufAN5lHcr_svJmjH27DQrxLxyxP6BeeMgY/edit?usp=sharing"
-    >Add some stuff to your grocery list for later.</a>
+    >📝 Add some stuff to your grocery list for later. 📝</a>
 
   </body>
 </html>
