--- a/PathProject/path10_day.html
+++ b/PathProject/path10_day.html
@@ -9,22 +9,32 @@
 
   <body class="day_bg">
 
-    <div class="toggle">
-      <a href="./path10_night.html">
-      <img src="assets/toggle-day.png" alt="Toggle day" width="50">
-      </a>
+
+    <div class="top_bar">
+        <div class="progress_container_day">
+            <div class="progress_bar_day" style="width: 100%">10/10</div>
+        </div>
+
+        <div class="toggle">
+          <a href="./path10_night.html">
+          <img src="assets/toggle-day.png" alt="Toggle day" width="50">
+          </a>
+        </div>
     </div>
 
-    <div class="outer">
+    <p id=end_day > You made it to the L train! Now the real journey begins. </p>
+    <a href="https://new.mta.info/"> 🚇 Where do you want to go? 🚇</a>
+
+    <div class="outer_end">
 
       <a href="./path9_day.html" class="arrow_back">
         <img src="assets/arrow-back-black.png" alt="Arrow back" width="30">
       </a>
 
-      <img src="assets/10. Deli - day.HEIC" alt="Deli at day" class="img">
+      <img src="assets/10_day.HEIC" alt="Subway at day" class="img_last">
 
-      <a href="./path11_day.html" class="arrow_next">
-        <img src="assets/arrow-next-black.png" alt="Arrow next" width="30">
+      <a href="" class="arrow_next">
+        <img src="assets/arrow-next-white.png" alt="Arrow next" width="30">
       </a>
 
     </div>
