--- a/PathProject/path5_day.html
+++ b/PathProject/path5_day.html
@@ -9,10 +9,16 @@
 
   <body class="day_bg">
 
-    <div class="toggle">
-      <a href="./path5_night.html">
-      <img src="assets/toggle-day.png" alt="Toggle day" width="50">
-      </a>
+    <div class="top_bar">
+        <div class="progress_container_day">
+            <div class="progress_bar_day" style="width: 50%">5/10</div>
+        </div>
+
+        <div class="toggle">
+          <a href="./path5_night.html">
+          <img src="assets/toggle-day.png" alt="Toggle day" width="50">
+          </a>
+        </div>
     </div>
 
     <div class="outer">
@@ -21,9 +27,9 @@
         <img src="assets/arrow-back-black.png" alt="Arrow back" width="30">
       </a>
 
-      <img src="assets/5. Williamsburg deli - day.HEIC" alt="Williamsburg Deli at day" class="img">
+      <img src="assets/5_day.HEIC" alt="duckduck at day" class="img">
 
-      <a href="./grocery_list.html" class="arrow_next">
+      <a href="./path6_day.html" class="arrow_next">
         <img src="assets/arrow-next-black.png" alt="Arrow next" width="30">
       </a>
 
