--- a/PathProject/path6_day.html
+++ b/PathProject/path6_day.html
@@ -9,10 +9,16 @@
 
   <body class="day_bg">
 
-    <div class="toggle">
-      <a href="./path6_night.html">
-      <img src="assets/toggle-day.png" alt="Toggle day" width="50">
-      </a>
+    <div class="top_bar">
+        <div class="progress_container_day">
+            <div class="progress_bar_day" style="width: 60%">6/10</div>
+        </div>
+
+        <div class="toggle">
+          <a href="./path6_night.html">
+          <img src="assets/toggle-day.png" alt="Toggle day" width="50">
+          </a>
+        </div>
     </div>
 
     <div class="outer">
@@ -21,7 +27,7 @@
         <img src="assets/arrow-back-black.png" alt="Arrow back" width="30">
       </a>
 
-      <img src="assets/6. Duckduck - day.HEIC" alt="duckduck at day" class="img">
+      <img src="assets/6_day.HEIC" alt="Finest Food at day" class="img">
 
       <a href="./path7_day.html" class="arrow_next">
         <img src="assets/arrow-next-black.png" alt="Arrow next" width="30">
