--- a/PathProject/path6_night.html
+++ b/PathProject/path6_night.html
@@ -9,10 +9,16 @@
 
   <body class="night_bg">
 
-    <div class="toggle">
-      <a href="./path6_day.html">
-      <img src="assets/toggle-night.png" alt="Toggle night" width="50">
-      </a>
+    <div class="top_bar">
+        <div class="progress_container_night">
+            <div class="progress_bar_night" style="width: 60%">6/10</div>
+        </div>
+
+        <div class="toggle">
+          <a href="./path6_day.html">
+          <img src="assets/toggle-night.png" alt="Toggle night" width="50">
+          </a>
+        </div>
     </div>
 
     <div class="outer">
@@ -21,7 +27,7 @@
         <img src="assets/arrow-back-white.png" alt="Arrow back" width="30">
       </a>
 
-      <img src="assets/6. Duckduck - night.HEIC" alt="duckduck at night" class="img">
+      <img src="assets/6_night.HEIC" alt="Finest Food at night" class="img">
 
       <a href="./path7_night.html" class="arrow_next">
         <img src="assets/arrow-next-white.png" alt="Arrow next" width="30">
