--- a/PathProject/path10_night.html
+++ b/PathProject/path10_night.html
@@ -9,22 +9,31 @@
 
   <body class="night_bg">
 
-    <div class="toggle">
-      <a href="./path10_day.html">
-      <img src="assets/toggle-night.png" alt="Toggle night" width="50">
-      </a>
+    <div class="top_bar">
+        <div class="progress_container_night">
+            <div class="progress_bar_night" style="width: 100%">10/10</div>
+        </div>
+
+        <div class="toggle">
+          <a href="./path10_day.html">
+          <img src="assets/toggle-night.png" alt="Toggle night" width="50">
+          </a>
+        </div>
     </div>
 
-    <div class="outer">
+    <p id=end_day style="color:white;"> You made it to the L train! Now the real journey begins. </p>
+    <a href="https://new.mta.info/" style="color:white;"> 🚇 Where do you want to go? 🚇</a>
+
+    <div class="outer_end">
 
       <a href="./path9_night.html" class="arrow_back">
         <img src="assets/arrow-back-white.png" alt="Arrow back" width="30">
       </a>
 
-      <img src="assets/10. Deli - night.HEIC" alt="Deli at night" class="img">
+      <img src="assets/10_night.HEIC" alt="Subway at night" class="img_last">
 
-      <a href="./path11_night.html" class="arrow_next">
-        <img src="assets/arrow-next-white.png" alt="Arrow next" width="30">
+      <a href="" class="arrow_next">
+        <img src="assets/arrow-next-black.png" alt="Arrow next" width="30">
       </a>
 
     </div>
