--- a/PathProject/path3_night.html
+++ b/PathProject/path3_night.html
@@ -9,10 +9,16 @@
 
   <body class="night_bg">
 
-    <div class="toggle">
-      <a href="./path3_day.html">
-      <img src="assets/toggle-night.png" alt="Toggle night" width="50">
-      </a>
+    <div class="top_bar">
+        <div class="progress_container_night">
+            <div class="progress_bar_night" style="width: 30%">3/10</div>
+        </div>
+
+        <div class="toggle">
+          <a href="./path3_day.html">
+          <img src="assets/toggle-night.png" alt="Toggle night" width="50">
+          </a>
+        </div>
     </div>
 
     <div class="outer">
@@ -21,7 +27,7 @@
         <img src="assets/arrow-back-white.png" alt="Arrow back" width="30">
       </a>
 
-      <img src="assets/3. Church - night.HEIC" alt="Church at night" class="img">
+      <img src="assets/3_night.HEIC" alt="Win Son at night" class="img">
 
       <a href="./path4_night.html" class="arrow_next">
         <img src="assets/arrow-next-white.png" alt="Arrow next" width="30">
