--- a/PathProject/path5_night.html
+++ b/PathProject/path5_night.html
@@ -9,10 +9,16 @@
 
   <body class="night_bg">
 
-    <div class="toggle">
-      <a href="./path5_day.html">
-      <img src="assets/toggle-night.png" alt="Toggle night" width="50">
-      </a>
+    <div class="top_bar">
+        <div class="progress_container_night">
+            <div class="progress_bar_night" style="width: 50%">5/10</div>
+        </div>
+
+        <div class="toggle">
+          <a href="./path5_day.html">
+          <img src="assets/toggle-night.png" alt="Toggle night" width="50">
+          </a>
+        </div>
     </div>
 
     <div class="outer">
@@ -21,9 +27,9 @@
         <img src="assets/arrow-back-white.png" alt="Arrow back" width="30">
       </a>
 
-      <img src="assets/5. Williamsburg deli - night.HEIC" alt="Williamsburg Deli at night" class="img">
+      <img src="assets/5_night.HEIC" alt="duckduck at night" class="img">
 
-      <a href="./grocery_list.html" class="arrow_next">
+      <a href="./path6_night.html" class="arrow_next">
         <img src="assets/arrow-next-white.png" alt="Arrow next" width="30">
       </a>
 
