--- a/PathProject/path9_night.html
+++ b/PathProject/path9_night.html
@@ -9,10 +9,16 @@
 
   <body class="night_bg">
 
-    <div class="toggle">
-      <a href="./path9_day.html">
-      <img src="assets/toggle-night.png" alt="Toggle night" width="50">
-      </a>
+    <div class="top_bar">
+        <div class="progress_container_night">
+            <div class="progress_bar_night" style="width: 90%">9/10</div>
+        </div>
+
+        <div class="toggle">
+          <a href="./path9_day.html">
+          <img src="assets/toggle-night.png" alt="Toggle night" width="50">
+          </a>
+        </div>
     </div>
 
     <div class="outer">
@@ -21,9 +27,9 @@
         <img src="assets/arrow-back-white.png" alt="Arrow back" width="30">
       </a>
 
-      <img src="assets/9. Stella - night.HEIC" alt="Stella Di Sicilia Bakery at night" class="img">
+      <img src="assets/9_night.HEIC" alt="Deli at night" class="img">
 
-      <a href="./birthday.html" class="arrow_next">
+      <a href="./path10_night.html" class="arrow_next">
         <img src="assets/arrow-next-white.png" alt="Arrow next" width="30">
       </a>
 
