update interaction site

--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
   <ol>
     <li><a href="https://ashleyezhang.github.io/interaction/PathProject/begin" target="blank">Project 1: Path</a></li>
     <li><a href="https://ashleyezhang.github.io/interaction/archive-main" target="blank">Project 2: Archive</a></li>
-    <li><a href="LINK GOES HERE" target="blank">Project 3: Query</a></li>
+    <li><a href="https://www.figma.com/proto/fWZnTGJOaxBHmagyD7wKDF/Query-Project?page-id=24%3A2&node-id=24%3A29&viewport=241%2C48%2C0.2&scaling=min-zoom&starting-point-node-id=24%3A29" target="blank">Project 3: Query</a></li>
   </ol>
 
   <h2>Exercises</h2>
   <ul>
     <li><a href="https://ashleyezhang.github.io/interaction/Top10/" target="blank">Top 10</a></li>
+    <li><a href="https://docs.google.com/presentation/d/1dD6cEfNRSx36gc3nRyk6vpg7jnEW3GXhTMJgIDQ2to0/edit#slide=id.g1145c6e2560_12_0" target="blank">Inspector</a></li>
     <li><a href="https://ashleyezhang.github.io/interaction/ShapeComposition/" target="blank">ShapeComposition</a></li>
-    <li><a href="LINK GOES HERE" target="blank">Exercise name</a></li>
+    <img src="assets/flexbox-froggy.png" alt="Flexbox Froggy" width="300">
+  </ul>
+
+  <h2>Misc</h2>
+  <ul>
+    <li><a href="https://www.are.na/block/15094159" target="blank">Web Share: A Change by Apple Is Tormenting Internet Companies, Especially Meta</a></li>
+    <li><a href="https://www.are.na/block/15094164" target="blank">Web Share: A trip through Japan</a></li>
+    <li><a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit" target="blank">Reading Reflections</a></li>
   </ul>
 
 </body>
